--- a/.air.toml
+++ b/.air.toml
@@ -4,6 +4,7 @@ tmp_dir = "tmp"
 [build]
   cmd = "go build -o ./tmp/main ./app"
   bin = "./tmp/main"
+  include_ext = ["go", "html", "css"]
 [proxy]
   enabled = true
   proxy_port = 3000
